--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   background:#FAF9F6;
-  color: #333;
+  color: #292828;
   text-align: center;
 }
 .main {
   display: flex;
   flex-direction: column;
-  padding: 30px;
-  background-color: #333;
+  background-color: #00295448;
+  padding-bottom: 30px;
 }
 
 .delay{
@@ -87,9 +87,8 @@ main .quem-somos {
   flex-direction: row;
   justify-content: space-around;
   column-gap: 10px;
-  background-color: rgba(0, 0, 0, 0.334);
-  border-radius: 10px;
-  color: #fff;
+  background-color: #FFFFFF;
+  color: black;
   padding: 30px;
   flex-wrap: wrap; /* ⬅️ ADICIONE ISSO */
 }
