--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ main #p2 {
   background-color: white;
   color: black;
   border: none;
+  text-decoration: none;
   border-radius: 10px;
   padding: 10px;
   width: 90px;
@@ -256,6 +257,7 @@ main #p2 {
   margin-bottom: 20px;
 }
 
+
 .titulo-card{
   padding: 10px;
   border-radius: 5px;
@@ -263,7 +265,7 @@ main #p2 {
 }
 
 
-.experiencias{
+.secao{
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -274,7 +276,11 @@ main #p2 {
   padding: 15px;
   flex-wrap: wrap; /* ⬅️ ADICIONE ISSO */
 }
-.experiencias h1{
+.secao h1{
   margin-left: 30px;
   color: whitesmoke;
+}
+
+.secao footer h1{
+  height: 100%;
 }
