atualização na seção sudeste

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ section.quem-somos{
 
 
 section#img01 {
-  background-image: url('./images/Imagem1.png');
+  background-image: url('./images/image1.png');
 }
 
 /* SEÇÃO QUEM SOMOS - estilo padrão para desktop */
