--- a/regions/stylesregions/styles.css
+++ b/regions/stylesregions/styles.css
@@ -11,16 +11,23 @@ body{
     color: white;
     grid-template-areas: 
         'header header header header'
-        'sidebar content content content'
-        'footer footer footer footer';
+        'sidebar content content content';
 }
 
 div #header{
     grid-area: header;
-    background-image: url('../images/imgs-header/sudeste.jpg');
+    background-image: url('../images/imgs-header/SE.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 300px;
+    display: flex;               /* Flexbox no header */
+    justify-content: center;     /* Centraliza horizontalmente */
+    align-items: center; 
+}
+#logo{
+    width: 1000px;
+    height: auto;
+    margin-top: 20px;
 }
 
 #sidebar{
@@ -29,10 +36,10 @@ div #header{
     background-color: #142c4c;
     display: flex;              /* Ativa o flexbox */
     flex-direction: column;     /* Alinha em coluna (um embaixo do outro) */
-    justify-content: center;    /* Centraliza na vertical */
+    justify-content: flex-start;    /* Centraliza na vertical */
     align-items: center; 
     height: 100%;
-    
+    padding: 30px;
 }
 .itens-sidebar {
     width: 600px;
@@ -50,12 +57,6 @@ div #header{
     height: 100%;
 }
 
-
-#footer{
-    grid-area: footer;
-    background-color: rgb(4, 51, 91);
-}
-
 /*.gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(680px, 1fr));
@@ -70,10 +71,11 @@ div #header{
     align-items: center;
     row-gap: 10px;
     flex-wrap: wrap;
+    padding: 20px;
 }
 
 .gallery img {
-    width: 990px;
+    width: 900px;
     height: 300px;
     object-fit: cover;
     border-radius: 10px;
