--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   opacity: 0;
   transform: translateY(-20px);
   animation: aparecer 1s ease forwards;
-  animation-delay: 0.5s; /* ⏱ atraso de 2 segundos */
+  animation-delay: 0.5s; 
 }
 
 @keyframes aparecer {
@@ -35,6 +35,7 @@ body {
 
 section.quem-somos{
   padding: 30px 30px;
+  font-size: 1.2rem;
 }
 
 .imagem {
